Enable fix for OSX Graal bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ quarkus.swagger-ui.always-include=true
 # avoid native image build error on OSX
 # sun.misc.URLClassPath.getLookupCacheURLs(ClassLoader) is reachable
 # likely an OSX issue: https://github.com/oracle/graal/issues/2144
-# quarkus.native.additional-build-args=--report-unsupported-elements-at-runtime
+quarkus.native.additional-build-args=--report-unsupported-elements-at-runtime
